Fix formatting, whitespace

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,71 +1,64 @@
-
-/*
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 2.5 License
-*/
-
 body {
-	margin: 0;
-	padding: 0;
-	background: #FFF;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	color: #8A8985;
+   margin: 0;
+   padding: 0;
+   background: #FFF;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 14px;
+   color: #8A8985;
 }
 
 h1, h2, h3 {
-	margin: 0;
-	padding: 0;
-	font-weight: normal;
-	color: #810988;
+   margin: 0;
+   padding: 0;
+   font-weight: normal;
+   color: #810988;
 }
 
 h1 {
-	font-size: 2em;
+   font-size: 2em;
 }
 
 h2 {
-	font-size: 2.8em;
+   font-size: 2.8em;
 }
 
 h3 {
-	font-size: 1.6em;
+   font-size: 1.6em;
 }
 
 p, ul, ol {
-	margin-top: 0;
-	line-height: 180%;
+   margin-top: 0;
+   line-height: 180%;
 }
 
 ul, ol {
 }
 
 a {
-	text-decoration: none;
-	color: #CA4C44;
+   text-decoration: none;
+   color: #CA4C44;
 }
 
 a:hover {
 }
 
 #wrapper {
-	margin: 0 auto;
-	padding: 0;
+   margin: 0 auto;
+   padding: 0;
 }
 
 .container {
-	width: 1000px;
-	margin: 0px auto;
+   width: 1000px;
+   margin: 0px auto;
 }
 
 /* Logo */
 
 #main {
 
-	margin: 10px;
-	padding: 0;
-	color: #000000;
+   margin: 10px;
+   padding: 0;
+   color: #000000;
    /* border-bottom: 1px dashed #eee; */
 }
 
@@ -73,33 +66,33 @@ a:hover {
 }
 
 #main h1 {
-	padding: 0px 0px 0px 0px;
-	letter-spacing: -2px;
-	text-transform: lowercase;
-	font-size: 3.8em;
-	background: redc;
+   padding: 0px 0px 0px 0px;
+   letter-spacing: -2px;
+   text-transform: lowercase;
+   font-size: 3.8em;
+   background: redc;
 }
 
 #main p {
-        display: inline;
-	margin-top: -10px;
-        margin-left: 5px;
-	padding: 0px 0 0 0px;
-	letter-spacing: -1px;
-	font: normal 18px Georgia, "Times New Roman", Times, serif;
-	font-style: italic;
-	color: #CCCCC4;
-} 
+   display: inline;
+   margin-top: -10px;
+   margin-left: 5px;
+   padding: 0px 0 0 0px;
+   letter-spacing: -1px;
+   font: normal 18px Georgia, "Times New Roman", Times, serif;
+   font-style: italic;
+   color: #CCCCC4;
+}
 
 #main p a {
-	color: #CCCCC4;
+   color: #CCCCC4;
 }
 
 #main a {
-	border: none;
-	background: none;
-	text-decoration: none;
-	color: #E3564F;
+   border: none;
+   background: none;
+   text-decoration: none;
+   color: #E3564F;
 }
 
 pre {
@@ -120,7 +113,6 @@ pre {
 }
 
 #category p {
-   
 }
 
 #category ul {
@@ -130,6 +122,4 @@ pre {
 }
 
 #category ul li {
-   /* padding-top: 3px; */
-   /* padding-bottom: 3px; */
 }
